@@ -84,7 +84,7 @@
  * The vertical axis will display values from the ref level to ref level - dynamic range.
  * |default 100.0
  * |units dB
- * |widget DoubleSpinBox(minimum=10, maximum=150, step=10, decimals=1)
+ * |widget DoubleSpinBox(minimum=10, maximum=200, step=10, decimals=1)
  * |preview disable
  * |tab Axis
  *
@@ -116,6 +116,13 @@
  * |preview disable
  * |tab Labels
  *
+ * |param startLabelId[Start Label ID] Align captured input to the specified label ID.
+ * An empty label ID disables this feature.
+ * |default ""
+ * |widget StringEntry()
+ * |preview disable
+ * |tab Labels
+ *
  * |mode graphWidget
  * |factory /plotters/spectrogram(remoteEnv)
  * |setter setTitle(title)
@@ -131,6 +138,7 @@
  * |setter enableYAxis(enableYAxis)
  * |setter setFreqLabelId(freqLabelId)
  * |setter setRateLabelId(rateLabelId)
+ * |setter setStartLabelId(startLabelId)
  **********************************************************************/
 class Spectrogram : public Pothos::Topology
 {
@@ -154,6 +162,7 @@ public:
         this->registerCall(this, POTHOS_FCN_TUPLE(Spectrogram, setNumFFTBins));
         this->registerCall(this, POTHOS_FCN_TUPLE(Spectrogram, setFreqLabelId));
         this->registerCall(this, POTHOS_FCN_TUPLE(Spectrogram, setRateLabelId));
+        this->registerCall(this, POTHOS_FCN_TUPLE(Spectrogram, setStartLabelId));
 
         //connect to internal display block
         this->connect(this, "setTitle", _display, "setTitle");
@@ -209,6 +218,12 @@ public:
         _display->setRateLabelId(id);
         _rateLabelId = id;
         this->updateIdsList();
+    }
+
+    void setStartLabelId(const std::string &id)
+    {
+        _trigger.callVoid("setLabelId", id);
+        _trigger.callVoid("setMode", id.empty()?"PERIODIC":"NORMAL");
     }
 
     void updateIdsList(void)
